# red-list-index

./: .gitignore  LICENSE.md  README.md  calculate_dissagregation_rli.py  calculate_global_rli.py  output.csv  pyproject.toml
.github/workflows/: main.yml
src/red_list_index/: __init__.py  calculate.py  calculate_groups.py  constants.py  data_frame_processor.py  group_data_frame_processor.py  group_year_aggregate.py  group_year_extrapolation.py  group_year_interpolation.py  plot.py  utils.py  year_interpolation.py
tests/: test_calculate.py  test_calculate_groups.py  test_data_frame_processor.py  test_group_data_frame_processor.py  test_group_year_aggregate.py  test_group_year_interpolation.py  test_utils.py  test_year_interpolation.py
tests/fixtures/: species_red_list_category_list.csv
