[project]
name = "red-list-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Townsend", email = "ian.townsend@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
