[project]
name = "red-list-index"
version = "0.1.0"
description = "IUCN Red List Index Python package"
readme = "README.md"
authors = [
    { name = "Simon Tarr", email = "simon.tarr@iucn.org" },
    { name = "Ian Townsend", email = "ian.townsend@iucn.org" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
